#Change Log

Team membership:  Nathan Miles (Captain) &  Teah Elaschuk (First Mate)  & (Mate)
Team conventions: Allman notation, markdown for changelog
Changelog format: [Markdown](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)

## *Version 1.0.0*

Release Date: 9/28/2017

## New Components


## Updated Components

- team members added and defined


## *Version 1.0.1*

Release Date: 9/28/2017

## New Components
 - controllers/Able.php: added a regular controller.


## Updated Components
 - config.php: changed target link for Alpha


## *Version 1.0.2*

Release Date

## New Components



## Updated Components



## *Version 1.0.2*



## New Components



## Updated Components



